--- a/scripts/components/road/tpls/attr_lc_tpl/lcLinkTpl.html
+++ b/scripts/components/road/tpls/attr_lc_tpl/lcLinkTpl.html
@@ -25,13 +25,13 @@
                         <li>
                             <label>Link长度</label>
                             <div>
-                                <input type="text" class="chosen-disabled" ng-model="lcLinkData.length" > m
+                                <input type="text" class="chosen-disabled" ng-model="lcLinkData.length" disabled> m
                             </div>
                         </li>
                         <li>
                             <label>图幅号码</label>
                             <div>
-                                <input type="text" class="chosen-disabled" ng-model="lcLinkData.meshId" >
+                                <input type="text" class="chosen-disabled" ng-model="lcLinkData.meshId" disabled>
                             </div>
                         </li>
                     </ul>
