--- a/scripts/components/road/tpls/attr_restrict_tpl/rdRestricOfOrdinaryTpl.html
+++ b/scripts/components/road/tpls/attr_restrict_tpl/rdRestricOfOrdinaryTpl.html
@@ -28,12 +28,12 @@
                         </li>
                         <li>
                             <label class="control-label">进入</label>
-                            <div><input type="text" ng-model="rdRestrictData.inLinkPid" readonly/></div>
+                            <div><input type="text" ng-model="rdRestrictData.inLinkPid" class="chosen-disabled" readonly/></div>
                         </li>
                         <li>
                             <label class="control-label">退出</label>
                             <div><input type="text" ng-click="changeOutLink(rdSubRestrictData)"
-                                        ng-model="rdSubRestrictData.outLinkPid" readonly/></div>
+                                        ng-model="rdSubRestrictData.outLinkPid"  class="chosen-disabled" readonly/></div>
                         </li>
                         <li>
                             <label class="control-label">交限标志</label>
