--- a/scripts/components/road/tpls/attr_link_tpl/rwLinkTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/rwLinkTpl.html
@@ -56,7 +56,7 @@
                             </div>
                         </li>
                         <li>
-                            <label>图幅编号</label>
+                            <label>图幅号码</label>
                             <div>
                                 <input type="text" ng-model="rwLinkData.meshId" class="chosen-disabled"  ng-disabled=true>
                             </div>
