修改页面表单,是部分表单不能修改

--- a/scripts/components/road/tpls/attr_gsc_tpl/rdGscTpl.html
+++ b/scripts/components/road/tpls/attr_gsc_tpl/rdGscTpl.html
@@ -23,7 +23,7 @@
                     <ul class="fm-ul fm-ul-form" ng-repeat="item in reGscData.links ">
                         <li>
                             <label class="control-label">组成link{{$index+1}}</label>
-                            <div><input type="text" ng-model="item.linkPid"/>
+                            <div><input type="text" disabled class="chosen-disabled" ng-model="item.linkPid"/>
                             </div>
                         </li>
                         <li>
