--- a/scripts/components/road/tpls/attr_same_tpl/rdSameNodeTpl.html
+++ b/scripts/components/road/tpls/attr_same_tpl/rdSameNodeTpl.html
@@ -10,13 +10,13 @@
                     <li style="padding:5px">
                         <label>Node{{$index+1}}号码</label>
                         <div >
-                            <input type="text" class="fm-control chosen-disabled" value="{{node.nodePid}}"/>
+                            <input type="text" disabled class="fm-control chosen-disabled" value="{{node.nodePid}}"/>
                         </div>
                     </li>
                     <li style="padding:5px">
                         <label>Node{{$index+1}}类型</label>
                         <div>
-                            <input type="text" class="fm-control chosen-disabled" value="{{node.tableName}}"/>
+                            <input type="text" disabled class="fm-control chosen-disabled" value="{{node.tableName}}"/>
                         </div>
                     </li>
                 </ul>
