--- a/scripts/components/road/tpls/attr_zone_tpl/zoneFaceTpl.html
+++ b/scripts/components/road/tpls/attr_zone_tpl/zoneFaceTpl.html
@@ -17,19 +17,19 @@
                         <li>
                             <label>图幅号</label>
                             <div>
-                                <input type="text" class="fm-control chosen-disabled" ng-model="zoneFaceData.meshId" >
+                                <input type="text" disabled class="fm-control chosen-disabled" ng-model="zoneFaceData.meshId" >
                             </div>
                         </li>
                         <li>
                             <label>面积</label>
                             <div>
-                                <input type="text" class="fm-control chosen-disabled" ng-model="zoneFaceData.area" >㎡
+                                <input type="text" disabled class="fm-control chosen-disabled" ng-model="zoneFaceData.area" >㎡
                             </div>
                         </li>
                         <li>
                             <label>周长</label>
                             <div>
-                                <input type="text" class="fm-control chosen-disabled" ng-model="zoneFaceData.perimeter" >m
+                                <input type="text" disabled class="fm-control chosen-disabled" ng-model="zoneFaceData.perimeter" >m
                             </div>
                         </li>
                     </ul>
