--- a/scripts/components/road/tpls/attr_zone_tpl/zoneLinkTpl.html
+++ b/scripts/components/road/tpls/attr_zone_tpl/zoneLinkTpl.html
@@ -35,13 +35,13 @@
                         <li>
                             <label>图幅号</label>
                             <div>
-                                <input type="text" ng-model="zoneLinkData.meshId" disabled="disabled">
+                                <input type="text" ng-model="zoneLinkData.meshId" class="chosen-disabled" disabled="disabled">
                             </div>
                         </li>
                         <li>
                             <label>Link长度</label>
                             <div class="form-inline">
-                                <input type="text" ng-model="zoneLinkData.length" disabled="disabled">&nbsp;m
+                                <input type="text" ng-model="zoneLinkData.length" class="chosen-disabled" disabled="disabled">&nbsp;m
                             </div>
                         </li>
                     </ul>
