--- a/scripts/components/road/tpls/attr_zone_tpl/zoneNodeTpl.html
+++ b/scripts/components/road/tpls/attr_zone_tpl/zoneNodeTpl.html
@@ -25,7 +25,7 @@
 		                <li>
 		                    <label>图符号</label>
 		                    <div>
-		                        <input type="text"  ng-model="zoneNodeData.meshId" disabled="disabled">
+		                        <input type="text"  ng-model="zoneNodeData.meshId" class="chosen-disabled" disabled>
 		                    </div>
 		                </li>
 		            </ul>
