--- a/scripts/components/road/tpls/attr_link_tpl/basicOfOtherTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/basicOfOtherTpl.html
@@ -59,7 +59,7 @@
             <div class="inline">
                 <input type="text" placeholder="0" style="width:120px"
                        ng-model="roadlinkData.feeStd">
-                <label>元/KM</label>
+                <label>元/公里</label>
             </div>
         </li>
         <li class="list-group-item">
@@ -118,7 +118,7 @@
             <div><label class="control-label">LINK长度</label></div>
             <div class="inline">
                 <input type="text"  placeholder="0"
-                       ng-model="roadlinkData.length" disabled class="chosen-disabled">
+                       ng-model="roadlinkData.length" disabled class="chosen-disabled"> 米
             </div>
         </li>
         <li class="list-group-item">
