--- a/scripts/components/road/tpls/attr_lc_tpl/lcLinkType.html
+++ b/scripts/components/road/tpls/attr_lc_tpl/lcLinkType.html
@@ -1,5 +1,5 @@
 <div ng-controller="addLclinkTypeController" style="color:#FFF;">
-    <div style="padding: 5px;color:#FFF;"><label class="control-label">node形态添加</label></div>
+    <div style="padding: 5px;color:#FFF;"><label class="control-label">link种别添加</label></div>
     <div ng-repeat="addItem in fromOfTypeOption">
         <input type="checkbox" ng-model="addItem.isCheck" ng-click="getCheck(addItem)" value="{{addItem.id}}">{{addItem.label}}</br>
     </div>
