--- a/scripts/components/road/tpls/attr_link_tpl/rwLinkTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/rwLinkTpl.html
@@ -52,7 +52,7 @@
                         <li>
                             <label>Link长度</label>
                             <div>
-                                <input type="text" disabled ng-model="rwLinkData.length" />
+                                <input type="text" class="chosen-disabled" disabled ng-model="rwLinkData.length" /> 米
                             </div>
                         </li>
                         <li>
