--- a/scripts/components/road/tpls/attr_lc_tpl/lcLinkTpl.html
+++ b/scripts/components/road/tpls/attr_lc_tpl/lcLinkTpl.html
@@ -25,7 +25,7 @@
                             <label>Link形态</label>
                             <div>
                                 <select ng-model="lcLinkData.kinds[0].form" ng-options="value.id as value.label for value in form">
-                                    <option value="">请选形态种别</option>
+                                    <!-- <option value="">请选形态种别</option> -->
                                 </select>
                             </div>
                         </li>
