--- a/scripts/components/road/tpls/attr_lc_tpl/lcLinkTpl.html
+++ b/scripts/components/road/tpls/attr_lc_tpl/lcLinkTpl.html
@@ -1,6 +1,6 @@
 <div class="fm-component" ng-controller="lcLinkController">
     <div class="title">
-        土地覆盖PID
+        LC线PID
         <span class="label label-info">{{lcLinkData.pid}}</span>
     </div>
     <div class="content scroll-styled dark" style="height:90%;">
