--- a/scripts/components/road/tpls/attr_link_tpl/basicTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/basicTpl.html
@@ -33,8 +33,8 @@
         <li class="list-group-item">
             <div><label class="control-label">车道数</label></div>
             <div class="inline">
-                <label ng-class="{'chosen-disabled':(linkData.direct==1)}" for="LaneNum" style="margin-left: -3px;">总</label>
-                <input ng-class="{'chosen-disabled':(linkData.direct==1)}" class="limit-length" id="LaneNum" type="text" style="width: 30px;" ng-model="linkData.laneNum"
+                <label for="LaneNum" style="margin-left: -3px;">总</label>
+                <input class="limit-length" id="LaneNum" type="text" style="width: 30px;" ng-model="linkData.laneNum"
                        ng-change="numberLengthLimit(1,linkData.laneNum)"/>
                 <label ng-class="{'chosen-disabled':!(linkData.direct==1)}" for="leftLaneNum">左</label>
                 <input ng-disabled="linkData.direct!=1" ng-class="{'chosen-disabled':!(linkData.direct==1)}" id="leftLaneNum" type="text" style="width: 30px" ng-model="linkData.laneLeft"
