修改一般问题

--- a/scripts/components/road/tpls/attr_speedLimit_tpl/speedLimitTpl.html
+++ b/scripts/components/road/tpls/attr_speedLimit_tpl/speedLimitTpl.html
@@ -112,14 +112,14 @@
                         <li>
                             <label>标牌坐标</label>
                             <div class="inline ">
-                                <input type="text" ng-model="speedLimitGeometryData.coordinates">
+                                <input type="text" ng-model="speedLimitGeometryData.coordinates" disabled>
                             </div>
 
                         </li>
                         <li>
                             <label>关联Link</label>
                             <div>
-                                <input type="text" ng-model="speedLimitData.linkPid">
+                                <input type="text" ng-model="speedLimitData.linkPid" disabled>
                             </div>
                         </li>
                         <li>
