--- a/scripts/components/road/tpls/attr_link_tpl/basicTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/basicTpl.html
@@ -8,7 +8,7 @@
             <div class="list-line"></div>
         </li>
         <li class="list-group-item">
-            <div><label class="control-label">图幅编号</label></div>
+            <div><label class="control-label">图幅号码</label></div>
             <div class="inline">
                 <input type="text" placeholder="0"
                        ng-model="linkData.meshId" disabled class="chosen-disabled">
