--- a/scripts/components/road/tpls/attr_zone_tpl/zoneLinkTpl.html
+++ b/scripts/components/road/tpls/attr_zone_tpl/zoneLinkTpl.html
@@ -41,7 +41,7 @@
                         <li>
                             <label>Link长度</label>
                             <div class="form-inline">
-                                <input type="text" ng-model="zoneLinkData.length" class="chosen-disabled" disabled="disabled">&nbsp;m
+                                <input type="text" ng-model="zoneLinkData.length" class="chosen-disabled" disabled="disabled">&nbsp;米
                             </div>
                         </li>
                     </ul>
