--- a/scripts/components/road/tpls/attr_adminstratives_tpl/adLinkTpl.html
+++ b/scripts/components/road/tpls/attr_adminstratives_tpl/adLinkTpl.html
@@ -43,7 +43,7 @@
                         <li>
                             <label>Link长度</label>
                             <div>
-                                <input type="text" ng-model="adLinkData.length" disabled="disabled">&nbsp;m
+                                <input type="text" ng-model="adLinkData.length" disabled="disabled">&nbsp;米
                             </div>
 
                         </li>
