车信功能开发

--- a/scripts/components/road/tpls/toolBar_cru_tpl/addConnexityTepl/directOfConnexityTpl.html
+++ b/scripts/components/road/tpls/toolBar_cru_tpl/addConnexityTepl/directOfConnexityTpl.html
@@ -35,7 +35,8 @@
 <div ng-controller="showDirectOfConnexity" id="addDirectOfConnexityDiv"  oncontextmenu="self.event.returnValue=false">
     <ul class="list-group list-group-lg m-b-none">
         <li class="list-group-item">
-            <div><label class="control-label">增加车信</label></div>
+            <div><label class="control-label" style="font-size: 12px">增加车信</label></div>
+            <div><label class="control-label" style="font-size: 10px">提示：左击增加普通车道，右击增加附加车道</label></div>
         </li>
         <li class="list-group-item">
             <div  class="trafficPic">
