--- a/scripts/components/road/tpls/attr_connexity_tpl/addDirectTpl.html
+++ b/scripts/components/road/tpls/attr_connexity_tpl/addDirectTpl.html
@@ -2,7 +2,8 @@
 <div ng-controller="addDirectOfConnexityController" id="addDirectOfConnexityDiv">
     <ul class="list-group list-group-lg m-b-none">
         <li class="list-group-item">
-            <div><label class="control-label" style="color: #fff">修改车信</label></div>
+            <div><label class="control-label" style="color: #fff;font-size: 12px">增加车道</label></div>
+            <div><label class="control-label" style="color: #fff;font-size: 10px">提示：选择图标后在地图上选择退出线</label></div>
         </li>
         <li class="list-group-item">
             <div  class="trafficPic">
