--- a/scripts/components/road/tpls/attr_lc_tpl/lcFaceTpl.html
+++ b/scripts/components/road/tpls/attr_lc_tpl/lcFaceTpl.html
@@ -51,13 +51,19 @@
                         <li>
                             <label>FACE面积</label>
                             <div>
-                                <input type="text" class="fm-control chosen-disabled" ng-model="lcFaceData.meshId" disabled>
+                                <input type="text" class="fm-control chosen-disabled" ng-model="lcFaceData.perimeter" disabled>
                             </div>
                         </li>
                         <li>
                             <label>FACE周长</label>
                             <div>
                                 <input type="text" class="fm-control chosen-disabled" ng-model="lcFaceData.area" disabled>
+                            </div>
+                        </li>
+                        <li>
+                            <label>图幅号</label>
+                            <div>
+                                <input type="text" class="fm-control chosen-disabled" ng-model="lcFaceData.meshId" disabled>
                             </div>
                         </li>
                     </ul>
