--- a/less/login2.less
+++ b/less/login2.less
@@ -1,8 +1,9 @@
 @company-logo-url:'../../images/poi/main/navi_logo.png';
 
-@login-bg-url:'../../images/poi/main/loginBackground.png';
+@login-bg-url:'../../images/poi/main/loginBackgroundColor.png';
 @userName-url:'../../images/poi/main/userName.png';
 @password-url:'../../images/poi/main/password.png';
+@login-logo-url:'../../images/poi/main/login_logo.png';
 html, body {
     width: 100%;
     height: 100%;
@@ -35,9 +36,6 @@ html, body {
     height: 100%;
     background: url(@login-bg-url) no-repeat 99% center;
     background-size:100% 100%;
-    min-width: 1366px;
-    min-height: 667px;
-
 }
 .left_part,
 .right_part{
@@ -127,9 +125,7 @@ footer.bs-docs-footer {
     top: 50%;
     margin-top: -106px;
     left: 50%;
-    margin-left: -20%;
-    width: 18.75%;
-    min-width: 256.125px;
+    margin-left: -256px;
 }
 .rememberMe {
     float: right;
@@ -138,4 +134,15 @@ footer.bs-docs-footer {
     margin-top: 2px;
     height: 16px;
     width: 16px;
+}
+.backgroundImageDiv {
+    background: url(@login-logo-url) no-repeat;
+    background-size: 831.6px,630px;
+    width: 831.6px;
+    height: 630px;
+    position: absolute;
+    top: 50%;
+    margin-top: -315px;
+    left: 50%;
+    margin-left: -415.8px;
 }
