修改交限bug，以及自发现交限的bug

--- a/scripts/components/road/tpls/attr_restrict_tpl/addDitrectTpl.html
+++ b/scripts/components/road/tpls/attr_restrict_tpl/addDitrectTpl.html
@@ -27,6 +27,7 @@
     <ul class="list-group list-group-lg m-b-none">
         <li class="list-group-item">
             <div><label class="control-label">增加交限</label></div>
+            <div><label class="control-label">提示：选择交限后点击增加,然后请选择退出线</label></div>
         </li>
         <li class="list-group-item">
             <div class="trafficPic ">
