--- a/scripts/components/road/tpls/toolBar_cru_tpl/addRestrictionTepl/directOfRestrictionTpl.html
+++ b/scripts/components/road/tpls/toolBar_cru_tpl/addRestrictionTepl/directOfRestrictionTpl.html
@@ -32,7 +32,7 @@
         background-color: transparent;
     }
 </style>
-<div ng-controller="addDirectOfRestrictionController" id="addDirectOfConnexityDiv"  oncontextmenu="self.event.returnValue=false">
+<div ng-controller="addDirectOfRestrictionController" id="addDirectOfConnexityDiv"  ><!-- oncontextmenu="self.event.returnValue=false" -->
     <ul class="list-group list-group-lg m-b-none">
         <li class="list-group-item">
             <div><label class="control-label">增加交限</label></div>
