工具栏改善

--- a/scripts/components/tools/tpls/assist-tools/batchJobPanelTpl.html
+++ b/scripts/components/tools/tpls/assist-tools/batchJobPanelTpl.html
@@ -13,7 +13,7 @@
         background-color: #313131;
     }
 </style>
-<div class="fm-panel" ng-controller="BatchJobPanelCtrl" style="margin:0px;">
+<div class="fm-panel" ng-controller="BatchJobPanelCtrl">
     <div class="title">批处理</div>
     <div class="content">
         <div class="fm-tabs" style="padding: 0 10px;">
