--- a/scripts/components/tools/tpls/assist-tools/beginCheckPanelTpl.html
+++ b/scripts/components/tools/tpls/assist-tools/beginCheckPanelTpl.html
@@ -13,7 +13,7 @@
         background-color: #313131;
     }
 </style>
-<div class="fm-panel" ng-controller="BeginCheckPanelCtrl" style="margin:0px;">
+<div class="fm-panel" ng-controller="BeginCheckPanelCtrl">
     <div class="title">执 行 检 查</div>
     <div class="content">
         <div class="fm-tabs" style="padding: 0 10px;" ng-init="batchType=0">
