--- a/scripts/components/tools/tpls/assist-tools/searchPanelTpl.html
+++ b/scripts/components/tools/tpls/assist-tools/searchPanelTpl.html
@@ -1,4 +1,4 @@
-<div class="fm-panel" ng-controller="SearchPanelCtrl" style="margin:0px;">
+<div class="fm-panel" ng-controller="SearchPanelCtrl">
     <div class="title">搜 索</div>
     <div class="content" >
         <div style="height:150px;">
