--- a/scripts/components/tools/tpls/toolbar-map/editorToolbarTpl.htm
+++ b/scripts/components/tools/tpls/toolbar-map/editorToolbarTpl.htm
@@ -1,74 +1,78 @@
 <div ng-controller="EditorToolbarCtrl">
-	<button class="fm-top-btn select-node-ft" title="选择点要素"></button>
-    <button class="fm-top-btn select-node" title="选择节点"></button>
-    <button class="fm-top-btn select-path" title="选择线"></button>
-    <button class="fm-top-btn select-face" title="选择面"></button>
-    <button class="fm-top-btn blank" title="选择Tips">Tip</button>
-    <button class="fm-top-btn blank" title="选择关系">关</button>
+    <div class="fm-top-btn-group" ng-controller="selectShapeCtrl">
+    	<button class="fm-top-btn select-node-ft" title="选择点要素" ng-click="selectShape('point')"></button>
+        <button class="fm-top-btn select-node" title="选择节点" ng-click="selectShape('node')"></button>
+        <button class="fm-top-btn select-path" title="选择线" ng-click="selectShape('link')"></button>
+        <button class="fm-top-btn select-face" title="选择面" ng-click="selectShape('face')"></button>
+        <button class="fm-top-btn blank" title="选择Tips" ng-click="selectShape('tips')">Tip</button>
+        <button class="fm-top-btn blank" title="选择关系" ng-click="selectShape('relation')">关</button>
+    </div>
     <div class="fm-top-btn split"></div>
-    <button class="fm-top-btn select-node" title="绘制节点"></button>
-    <button class="fm-top-btn select-path" title="绘制线"></button>
-    <div class="btn-group" style="vertical-align: top;">
-        <button type="button" class="btn fm-top-btn more dropdown-toggle" data-toggle="dropdown"></button>
-        <ul class="dropdown-menu dropdown-menu-right">
-            <li>
-                <div class="row" style="margin:0px;padding:0px;">
-                    <div class="col-md-3" style="text-align:center;">
-                        要素
+    <div class="fm-top-btn-group">
+        <button class="fm-top-btn select-node" title="绘制节点"></button>
+        <button class="fm-top-btn select-path" title="绘制线"></button>
+        <div class="btn-group" style="vertical-align: top;">
+            <button type="button" class="btn fm-top-btn more dropdown-toggle" data-toggle="dropdown"></button>
+            <ul class="dropdown-menu dropdown-menu-right">
+                <li>
+                    <div class="row" style="margin:0px;padding:0px;">
+                        <div class="col-md-3" style="text-align:center;">
+                            要素
+                        </div>
+                        <div class="col-md-9">
+                            <button class="fm-top-btn blank" title="制作POI">POI</button>
+                            <button class="fm-top-btn blank" title="制作行政区划代表点">代</button>
+                        </div>
                     </div>
-                    <div class="col-md-9">
-                        <button class="fm-top-btn blank" title="制作POI">POI</button>
-                        <button class="fm-top-btn blank" title="制作行政区划代表点">代</button>
+                </li>
+                <li class="divider"></li>
+                <li>
+                    <div class="row" style="margin:0px;padding:0px;">
+                        <div class="col-md-3" style="text-align:center;">
+                            点
+                        </div>
+                        <div class="col-md-9">
+                            <button class="fm-top-btn blank" title="制作道路线节点">道</button>
+                            <button class="fm-top-btn blank" title="制作铁路线节点">铁</button>
+                            <button class="fm-top-btn blank" title="制作行政区划面的组成线节点">政</button>
+                            <button class="fm-top-btn blank" title="制作Zone面的组成线节点">ZN</button>
+                            <button class="fm-top-btn blank" title="制作土地利用面的组成线节点">LU</button>
+                            <button class="fm-top-btn blank" title="制作土地覆盖面的组成线节点">LC</button>
+                        </div>
                     </div>
-                </div>
-            </li>
-            <li class="divider"></li>
-            <li>
-                <div class="row" style="margin:0px;padding:0px;">
-                    <div class="col-md-3" style="text-align:center;">
-                        点
+                </li>
+                <li class="divider"></li>
+                <li>
+                    <div class="row" style="margin:0px;padding:0px;">
+                        <div class="col-md-3" style="text-align:center;">
+                            线
+                        </div>
+                        <div class="col-md-9">
+                            <button class="fm-top-btn blank" title="制作道路线">道</button>
+                            <button class="fm-top-btn blank" title="制作铁路线">铁</button>
+                            <button class="fm-top-btn blank" title="制作行政区划面的组成线">政</button>
+                            <button class="fm-top-btn blank" title="制作Zone面的组成线">ZN</button>
+                            <button class="fm-top-btn blank" title="制作土地利用面的组成线">LU</button>
+                            <button class="fm-top-btn blank" title="制作土地覆盖面的组成线">LC</button>
+                        </div>
                     </div>
-                    <div class="col-md-9">
-                        <button class="fm-top-btn blank" title="制作道路线节点">道</button>
-                        <button class="fm-top-btn blank" title="制作铁路线节点">铁</button>
-                        <button class="fm-top-btn blank" title="制作行政区划面的组成线节点">政</button>
-                        <button class="fm-top-btn blank" title="制作Zone面的组成线节点">ZN</button>
-                        <button class="fm-top-btn blank" title="制作土地利用面的组成线节点">LU</button>
-                        <button class="fm-top-btn blank" title="制作土地覆盖面的组成线节点">LC</button>
+                </li>
+                <li class="divider"></li>
+                <li>
+                    <div class="row" style="margin:0px;padding:0px;">
+                        <div class="col-md-3" style="text-align:center;">
+                            面
+                        </div>
+                        <div class="col-md-9">
+                            <button class="fm-top-btn blank" title="制作行政区划面">政</button>
+                            <button class="fm-top-btn blank" title="制作Zone面">ZN</button>
+                            <button class="fm-top-btn blank" title="制作土地利用面">LU</button>
+                            <button class="fm-top-btn blank" title="制作土地覆盖面">LC</button>
+                        </div>
                     </div>
-                </div>
-            </li>
-            <li class="divider"></li>
-            <li>
-                <div class="row" style="margin:0px;padding:0px;">
-                    <div class="col-md-3" style="text-align:center;">
-                        线
-                    </div>
-                    <div class="col-md-9">
-                        <button class="fm-top-btn blank" title="制作道路线">道</button>
-                        <button class="fm-top-btn blank" title="制作铁路线">铁</button>
-                        <button class="fm-top-btn blank" title="制作行政区划面的组成线">政</button>
-                        <button class="fm-top-btn blank" title="制作Zone面的组成线">ZN</button>
-                        <button class="fm-top-btn blank" title="制作土地利用面的组成线">LU</button>
-                        <button class="fm-top-btn blank" title="制作土地覆盖面的组成线">LC</button>
-                    </div>
-                </div>
-            </li>
-            <li class="divider"></li>
-            <li>
-                <div class="row" style="margin:0px;padding:0px;">
-                    <div class="col-md-3" style="text-align:center;">
-                        面
-                    </div>
-                    <div class="col-md-9">
-                        <button class="fm-top-btn blank" title="制作行政区划面">政</button>
-                        <button class="fm-top-btn blank" title="制作Zone面">ZN</button>
-                        <button class="fm-top-btn blank" title="制作土地利用面">LU</button>
-                        <button class="fm-top-btn blank" title="制作土地覆盖面">LC</button>
-                    </div>
-                </div>
-            </li>
-        </ul>
+                </li>
+            </ul>
+        </div>
     </div>
     <div class="fm-top-btn split"></div>
     <button class="fm-top-btn blank" title="制作路口">路</button>
