--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -2569,20 +2569,21 @@ input[type="range"]::-webkit-slider-thumb {
 
 .fm-top-btn.blank {
     color: #8f9acc;
-    background: url("../../images/main/btn-icon/blank.png") no-repeat center center;
+    /*background: url("../../images/main/btn-icon/blank.png") no-repeat center center;*/
+    background: #ffffff;
+    border: 1px solid #dde0e6;
 }
 
-.fm-top-btn.blank:hover, .fm-top-btn.blank:focus, .fm-top-btn.blank.active {
+.fm-top-btn.blank:hover {
     color: #ffffff;
     background: #5896ff;
 }
 
 .fm-top-btn.blank:focus, .fm-top-btn.blank.active {
     color: #5896ff;
-    /*background: #ffffff;*/
-    /*border: 1px solid #5896ff;*/
-    background: url("../../images/main/btn-icon/blank.png") no-repeat center center;
-    vertical-align: top;
+    background: #ffffff;
+    border: 1px solid #5896ff;
+    /*background: url("../../images/main/btn-icon/blank.png") no-repeat center center;*/
 }
 
 .fm-top-btn.select-node-ft {
