工具栏改善

--- a/less/editor-road.less
+++ b/less/editor-road.less
@@ -1065,7 +1065,9 @@
     height: 40px;
     line-height: 40px;
     padding: 0px 10px;
-    z-index: 2
+    z-index: 2;
+    /*解决inline-block样式的间隙问题*/
+    font-size: 0;
 }
 
 .fm-top-btn {
@@ -1075,12 +1077,16 @@
     line-height: 12px;
     border: none;
     border-radius: 5px;
-    margin: 7px 4px;
+    margin: 7px;
     padding: 0px;
     background: #ffffff;
     vertical-align: top;
     font-size: 12px;
     text-align: center;
+}
+
+.fm-top-btn.eng {
+    font-size: 10px;
 }
 
 .fm-top-btn.blank {
@@ -1150,11 +1156,7 @@
 
 .fm-top-right-btn {
     display: inline-block;
-    height: 30px;
-    width: 30px;
-    line-height: 30px;
     border: none;
-    margin: 5px 15px;
     padding: 0px;
     background: #ffffff;
     vertical-align: top;
@@ -1163,13 +1165,22 @@
 }
 
 .fm-top-right-btn.profile {
+    height: 30px;
+    width: 30px;
+    margin: 5px 15px;
     background: url("../../images/main/btn-icon/profile.png") no-repeat center center;
 }
 
 .fm-top-right-btn.notice {
+    height: 20px;
+    width: 20px;
+    margin: 10px 15px;
     background: url("../../images/main/btn-icon/notice.png") no-repeat center center;
 }
 
 .fm-top-right-btn.logout {
+    height: 20px;
+    width: 18px;
+    margin: 10px 15px;
     background: url("../../images/main/btn-icon/logout.png") no-repeat center center;
 }
