工具栏改善

--- a/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
+++ b/scripts/components/tools/tpls/toolbar/toolbarTpl.htm
@@ -155,7 +155,7 @@
             <li class="divider"></li>
             <li>
                 <div class="row" style="margin:0px;padding:0px;">
-                    <div class="col-md-3" style="text-align:center;font-size:10px;">
+                    <div class="col-md-3 eng" style="text-align:center;">
                         CRF
                     </div>
                     <div class="col-md-9">
