--- a/less/editor-road.less
+++ b/less/editor-road.less
@@ -1070,6 +1070,14 @@
     font-size: 0;
 }
 
+.fm-top .dropdown-menu {
+    font-size: 12px;
+}
+
+.fm-top .eng {
+    font-size: 10px;
+}
+
 .fm-top-btn {
     display: inline-block;
     height: 26px;
@@ -1083,10 +1091,6 @@
     vertical-align: top;
     font-size: 12px;
     text-align: center;
-}
-
-.fm-top-btn.eng {
-    font-size: 10px;
 }
 
 .fm-top-btn.blank {
