--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -2120,142 +2120,118 @@ a.batchButton {
   right: -12px;
   cursor: pointer;
 }
-
 /********************************************************************************/
-
-
 /************新的界面风格********************************************************/
-
-
 /********************************************************************************/
-
 .fm-top {
-    position: absolute;
-    border-bottom: 1px solid #acacac;
-    background-color: #ffffff;
-    height: 40px;
-    line-height: 40px;
-    padding: 0px 10px;
-    z-index: 2;
-    /*解决inline-block样式的间隙问题*/
-    font-size: 0;
+  position: absolute;
+  border-bottom: 1px solid #acacac;
+  background-color: #ffffff;
+  height: 40px;
+  line-height: 40px;
+  padding: 0px 10px;
+  z-index: 2;
+  /*解决inline-block样式的间隙问题*/
+  font-size: 0;
 }
-
 .fm-top .dropdown-menu {
-    font-size: 12px;
+  font-size: 12px;
 }
-
 .fm-top .eng {
-    font-size: 10px;
+  font-size: 10px;
 }
-
 .fm-top-btn {
-    display: inline-block;
-    height: 26px;
-    width: 26px;
-    line-height: 12px;
-    border: none;
-    border-radius: 5px;
-    margin: 7px;
-    padding: 0px;
-    background: #ffffff;
-    vertical-align: top;
-    font-size: 12px;
-    text-align: center;
+  display: inline-block;
+  height: 26px;
+  width: 26px;
+  line-height: 12px;
+  border: none;
+  border-radius: 5px;
+  margin: 7px;
+  padding: 0px;
+  background: #ffffff;
+  vertical-align: top;
+  font-size: 12px;
+  text-align: center;
 }
-
 .fm-top-btn.blank {
-    color: #8f9acc;
-    /*background: url("../../images/main/btn-icon/blank.png") no-repeat center center;*/
-    background: #ffffff;
-    border: 1px solid #dde0e6;
+  color: #8f9acc;
+  /*background: url("../../images/main/btn-icon/blank.png") no-repeat center center;*/
+  background: #ffffff;
+  border: 1px solid #dde0e6;
 }
-
 .fm-top-btn.blank:hover {
-    color: #ffffff;
-    background: #5896ff;
+  color: #ffffff;
+  background: #5896ff;
 }
-
-.fm-top-btn.blank:focus, .fm-top-btn.blank.active {
-    color: #5896ff;
-    background: #ffffff;
-    border: 1px solid #5896ff;
-    /*background: url("../../images/main/btn-icon/blank.png") no-repeat center center;*/
+.fm-top-btn.blank:focus,
+.fm-top-btn.blank.active {
+  color: #5896ff;
+  background: #ffffff;
+  border: 1px solid #5896ff;
+  /*background: url("../../images/main/btn-icon/blank.png") no-repeat center center;*/
 }
-
 .fm-top-btn.select-node-ft {
-    background: url("../../images/main/btn-icon/select-node-ft.png") no-repeat center center;
+  background: url("../../images/main/btn-icon/select-node-ft.png") no-repeat center center;
 }
-
 .fm-top-btn.select-node {
-    background: url("../../images/main/btn-icon/select-node.png") no-repeat center center;
+  background: url("../../images/main/btn-icon/select-node.png") no-repeat center center;
 }
-
 .fm-top-btn.select-path {
-    background: url("../../images/main/btn-icon/select-path.png") no-repeat center center;
+  background: url("../../images/main/btn-icon/select-path.png") no-repeat center center;
 }
-
 .fm-top-btn.select-face {
-    background: url("../../images/main/btn-icon/select-face.png") no-repeat center center;
+  background: url("../../images/main/btn-icon/select-face.png") no-repeat center center;
 }
-
 .fm-top-btn.more {
-    background: url("../../images/main/btn-icon/more-btn.png") no-repeat center center;
+  background: url("../../images/main/btn-icon/more-btn.png") no-repeat center center;
 }
-
 .fm-top-btn.more:hover {
-    background: url("../../images/main/btn-icon/more-btn-hover.png") no-repeat center center;
+  background: url("../../images/main/btn-icon/more-btn-hover.png") no-repeat center center;
 }
-
-.fm-top-btn.more.active, .fm-top-btn.more:focus {
-    background: url("../../images/main/btn-icon/more-btn-active.png") no-repeat center center;
+.fm-top-btn.more.active,
+.fm-top-btn.more:focus {
+  background: url("../../images/main/btn-icon/more-btn-active.png") no-repeat center center;
 }
-
 .fm-top-btn.split {
-    background: url("../../images/main/btn-icon/split.png") no-repeat center center;
+  background: url("../../images/main/btn-icon/split.png") no-repeat center center;
 }
-
 .fm-top-btn.loading {
-    margin-top: -26px;
-    margin-left: 0px;
-    opacity: 0.5;
-    background-color: gray;
-    background-image: url("../../images/poi/icon/loading-cycle.gif");
-    background-repeat: no-repeat;
-    background-position: center;
+  margin-top: -26px;
+  margin-left: 0px;
+  opacity: 0.5;
+  background-color: gray;
+  background-image: url("../../images/poi/icon/loading-cycle.gif");
+  background-repeat: no-repeat;
+  background-position: center;
 }
-
 .fm-top-btn-group {
-    display: inline-block;
+  display: inline-block;
 }
-
 .fm-top-right-btn {
-    display: inline-block;
-    border: none;
-    padding: 0px;
-    background: #ffffff;
-    vertical-align: top;
-    font-size: 12px;
-    text-align: center;
+  display: inline-block;
+  border: none;
+  padding: 0px;
+  background: #ffffff;
+  vertical-align: top;
+  font-size: 12px;
+  text-align: center;
 }
-
 .fm-top-right-btn.profile {
-    height: 30px;
-    width: 30px;
-    margin: 5px 15px;
-    background: url("../../images/main/btn-icon/profile.png") no-repeat center center;
+  height: 30px;
+  width: 30px;
+  margin: 5px 15px;
+  background: url("../../images/main/btn-icon/profile.png") no-repeat center center;
 }
-
 .fm-top-right-btn.notice {
-    height: 20px;
-    width: 20px;
-    margin: 10px 15px;
-    background: url("../../images/main/btn-icon/notice.png") no-repeat center center;
+  height: 20px;
+  width: 20px;
+  margin: 10px 15px;
+  background: url("../../images/main/btn-icon/notice.png") no-repeat center center;
 }
-
 .fm-top-right-btn.logout {
-    height: 20px;
-    width: 18px;
-    margin: 10px 15px;
-    background: url("../../images/main/btn-icon/logout.png") no-repeat center center;
+  height: 20px;
+  width: 18px;
+  margin: 10px 15px;
+  background: url("../../images/main/btn-icon/logout.png") no-repeat center center;
 }
